Specifying a Working Directory

--- a/playground/Dockerfile
+++ b/playground/Dockerfile
@@ -4,7 +4,7 @@ FROM node:alpine
 # this line just be used to fix "idealTree already exists" error 
 WORKDIR /usr/app
 
-# copy from current folder to ./ in container
+# copy from current folder to /usr/app in container
 COPY ./ ./
 
 # Install some dependencies
