--- a/playground/docker-compose.yaml
+++ b/playground/docker-compose.yaml
@@ -1,11 +1,8 @@
-# this is the version of docker-compose that we want to use
 version: '3'
-# services = containers
 services:
   redis-server:
-    image: 'redis' # use this image to build the container
+    image: 'redis'
   node-app:
-    build: . # use the Dockerfile in current folder to build the container
-    # - : array
+    build: .
     ports:
       - 8081: 8081
