--- a/playground/docker-compose.yml
+++ b/playground/docker-compose.yml
@@ -9,3 +9,13 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
+
+  # exactly same as above, just without the port + overwrite the starting command
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    command: ['npm', 'run', 'test']
