--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
-# need to have sudo permission
 sudo: require
 services:
   - docker
 
-# these series of steps will be run at first
 before_install:
   - docker build -t hungbui7690/docker-react -f Dockerfile.dev .
 
-# script will run after build
 script:
   - docker run -e CI=true hungbui7690/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'docker'
+  env: 'Docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-484992977674'
+  bucket_path: 'docker'
+  on:
+    branch: main
