--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t hungbui7690/docker-react -f Dockerfile.dev .
+  - docker build -t hungbui7690/docker-react:latest -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true hungbui7690/docker-react npm run test -- --coverage
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'us-east-2'
   app: 'docker'
-  env: 'Docker-env'
+  env: 'docker-env-1'
   bucket_name: 'elasticbeanstalk-us-east-2-484992977674'
   bucket_path: 'docker'
   on:
