--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'us-east-2'
   app: 'docker'
-  env: 'Docker-env'
+  env: 'docker-env'
   bucket_name: 'elasticbeanstalk-us-east-2-484992977674'
   bucket_path: 'docker'
   on:
