--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,6 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - 3000:3000
-    volumes:
-      - /app/node_modules
-      - .:/app
-
-  # exactly same as above, just without the port + overwrite the starting command
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: ['npm', 'run', 'test']
+      - 80:80
